# Future-of-robotics

./: README.md  SETUP_D_DRIVE_NEXT_STEPS.txt
Lerobot/: Physical_AI_Hackathon_2026_Elite_Battle_Plan.md  Physical_AI_Hackathon_Complete_Guide.md  autonomous_pick_place.py  dataset_converter.py  diagnose_robot.py  diagnose_v2.py  find_place_config.py  headless_data_generator.py  run_autonomous_sim.sh  so101_mujoco_viewer.py  test_grasp_wait.py  train_physical_ai.sh
Robot_Task1/: pose_scan_helper.py  task1_so101_autonomous_pipeline.md
Robot_Task1/so101_mujoco/: CMakeLists.txt  package.xml
Robot_Task1/so101_mujoco/launch/: task1_pick_place.launch.py  task3_pouring.launch.py
Robot_Task1/so101_mujoco/mujoco/: so101_new_calib.xml  task1_pick_place_scene.xml  task3_pouring_scene.xml
Robot_Task1/so101_mujoco/scripts/: so101_mujoco_bridge.py  task1_autonomy.py  task3_autonomy.py
physical-ai-challenge-2026/: Complete_Setup_Guide_Hackathon2026.md  README.md  densefusion_pick_place.ipynb  densefusion_pick_place.py  runbook.md
physical-ai-challenge-2026/Context/: Plan-1.md  SETUP-Perp.md  Setup-Claude.md
physical-ai-challenge-2026/macos_pipeline/: README.md  README_AUTONOMOUS.md  README_DEMO.md  autonomous_runner.py  collect_training_data.py  launch_simulation.sh  mujoco_smoke_test.py  quickstart.sh  requirements.txt  run_autonomous.py  run_pipeline.py  setup_and_run.sh  test_autonomous.py
physical-ai-challenge-2026/macos_pipeline/mujoco_demo/: capture_and_view.py  generate_dataset.py  record_demo.py  runner.py  scene_builder.py  viewer.py
(+11 files in other folders)
